--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,3 +1,4 @@
+<!-- 홈에서 내리면 나오는 blog 부분. Enter있고. 그 부분임.-->
 <section id="blog">
     <div class="wrapper">
         <svg id="sky" xmlns="http://www.w3.org/2000/svg"  version="1.1" width="100%" height="100%" viewBox="0 0 1600 450">
