--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -33,6 +33,17 @@
                     <img src="../assets/images/pocket-weather.jpg"/>
                 </div>
             </div>
+	    <div class="vertical-timeline-block">
+                <div class="vertical-timeline-icon">
+                    <i class="fa fa-paw" aria-hidden="true"></i>
+                </div>
+                <div class="vertical-timeline-content">
+                    <h4><a>테스트</a></h4>
+                    <p>
+                        <span>프로젝트 테스트. This is test for project</span>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
