--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -35,7 +35,7 @@
             </div>
 	    <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon">
-                    <i class="fa fa-fish" aria-hidden="true"></i>
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
                     <h4><a>테스트</a></h4>
