--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -38,7 +38,7 @@
                     <i class="fa fa-pencil" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a>테스트</a></h4>
+                    <h4><a>For test</a></h4>
                     <p>
                         <span>프로젝트 테스트. This is test for project</span>
                     </p>
