add the gbc project

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -23,14 +23,14 @@
             </div>
             <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon">
-                    <i class="fa fa-sun-o" aria-hidden="true"></i>
+                    <i class="fa fa-lock" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a>Pocket weather: An applet of WeChat</a></h4>
+                    <h4><a>GBC Study</a></h4>
                     <p>
-                        <span>An applet to provide weather conditions of prefecture-level cities in China. Scan the following two-dimensional code with WeChat to use it.</span>
+                        <span>Studied: 2020.12.21 ~ 2021.01.31</span>
                     </p>
-                    <img src="../assets/images/pocket-weather.jpg"/>
+                    <img src="../assets/images/ghost_img/ghost.PNG"/>
                 </div>
             </div>
 	    <div class="vertical-timeline-block">
