--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -26,7 +26,7 @@
                     <i class="fa fa-lock" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a>GBC Study</a></h4>
+                    <h4><a href="https://kdjun97.github.io/blog/gbc_study/" target="_blank">GBC Study</a></h4>
                     <p>
                         <span>Studied: 2020.12.21 ~ 2021.01.31</span>
                     </p>
