--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -38,9 +38,9 @@
                     <i class="fa fa-pencil" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a>For test</a></h4>
+                    <h4><a>A Communication Program Using Flutter</a></h4>
                     <p>
-                        <span>프로젝트 테스트. This is test for project</span>
+                        <span>Developing: 2021.02.1 ~</span>
                     </p>
                 </div>
             </div>
