--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       {% if page.nav != 'home' %}
         <a href=" /">Home</a>
         <a href=" /blog ">Blog</a>
-        <a href=" /feed.xml "><i class="fa fa-rss" aria-hidden="true"></i></a>
+        #<a href=" /feed.xml "><i class="fa fa-rss" aria-hidden="true"></i></a> # Home Blog 다음 나오는 와이파이처럼 생긴 링크 없앰.
       {% else %}
         <a href=" # ">Home</a>
         <a href=" #about ">About</a>
