--- a/assets/_sass/_settings.device.scss
+++ b/assets/_sass/_settings.device.scss
@@ -27,8 +27,8 @@
   .posts-tabs i {
 	margin-left: 0.8em;
 	margin-right: 0.8em;
-//	&:first-of-type {
-//		margin-left: 1.2em;
-//	}
+	&:first-of-type {
+		margin-left: 1.2em;
+	}
   }
 }
