add project:Lazy Manager

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,15 +7,17 @@
 
             <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon">
-                    <i class="fa fa-paw" aria-hidden="true"></i>
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a>Ice bear: A jekyll theme</a></h4>
+                    <h4><a href="https://kdjun97.github.io/blog/Key_Logger/" target="_blank">Lazy Manager</a></h4>
                     <p>
-						<span>This is a clean jekyll theme. To learn how to install and use this theme, please check out the <a href="http://ikongsong.com/blog/ice-bear-jekyll-theme/" target="_blank">installation</a> guide for more information. It's welcomed to give me a star at github if you like it.</span>
+						<span>Stopped Development</span>
                         <div>
+                            <!--
                             <iframe src="https://ghbtns.com/github-btn.html?user=songkong&repo=Blog&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
                             <iframe src="https://ghbtns.com/github-btn.html?user=songkong&repo=Blog&type=fork&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+                            -->
                         </div>
 
 					</p>
