--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -30,7 +30,7 @@
                 <div class="vertical-timeline-content">
                     <h4><a href="https://kdjun97.github.io/blog/gbc_study/" target="_blank">GBC Study</a></h4>
                     <p>
-                        <span>Studied: 2020.12.21 ~ 2021.01.31</span>
+                        <span>Studied: [2020.12.21 ~ 2021.01.31]</span>
                     </p>
                     <img src="../assets/images/ghost_img/ghost.PNG"/>
                 </div>
@@ -42,7 +42,7 @@
                 <div class="vertical-timeline-content">
                     <h4><a>A Communication Program Using Flutter</a></h4>
                     <p>
-                        <span>Developing: 2021.02.1 ~</span>
+                        <span>Developing: [2021.02.01 ~ ]</span>
                     </p>
                 </div>
             </div>
