find text-indent

--- a/assets/_sass/_base.links.scss
+++ b/assets/_sass/_base.links.scss
@@ -142,7 +142,8 @@ blockquote a {
 		margin-right: 1.6em;
 	}
 	i:first-of-type {
-		margin-left: 2.4em;
+		//margin-left: 2.4em;
+		margin-left: 40em;
 	}
 	i:nth-of-type(2n) {
 		bottom: 0.4em;
