find text-indent

--- a/assets/_sass/_base.text.scss
+++ b/assets/_sass/_base.text.scss
@@ -52,7 +52,8 @@
     -ms-flex: 1;
     flex: 1;
     border-top: 2px dashed $light-blue;
-    margin-left: 10px;
+    //margin-left: 10px;
+    margin-left: 100px;
   }
 }
 
