find text-indent

--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -187,7 +187,8 @@ p   {
 }
 .post-content {
 	p {
-		text-indent: 2em;
+        //text-indent: 2em;
+        text-indent: 50em;
     }
     blockquote p {
         text-indent: 0;
