--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -40,10 +40,11 @@
                     <i class="fa fa-pencil" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a>A Communication Program Using Flutter</a></h4>
+                    <h4><a>Liar Game Using Flutter</a></h4>
                     <p>
-                        <span>Developing: [2021.02.01 ~ ]</span>
+                        <span>Developed: [2021.02.01 ~ 2021.02.28]</span>
                     </p>
+                    <img src="../assets/images/Project_Liar/title.jpg"/>
                 </div>
             </div>
         </div>
