--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -40,7 +40,7 @@
                     <i class="fa fa-pencil" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a>Liar Game Using Flutter</a></h4>
+                    <h4><a href="https://kdjun97.github.io/blog/Project_Liar/" target="_blank">Liar Game Using Flutter</a></h4>
                     <p>
                         <span>Developed: [2021.02.01 ~ 2021.02.28]</span>
                     </p>
