--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -35,7 +35,7 @@
                     <img src="../assets/images/ghost_img/ghost.PNG"/>
                 </div>
             </div>
-	    <div class="vertical-timeline-block">
+	        <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon">
                     <i class="fa fa-pencil" aria-hidden="true"></i>
                 </div>
@@ -45,6 +45,18 @@
                         <span>Developed: [2021.02.01 ~ 2021.02.28]</span>
                     </p>
                     <img src="../assets/images/Project_Liar/title.jpg"/>
+                </div>
+            </div>
+	        <div class="vertical-timeline-block">
+                <div class="vertical-timeline-icon">
+                    <i class="fa fa-umbrella" aria-hidden="true"></i>
+                </div>
+                <div class="vertical-timeline-content">
+                    <h4><a href="https://kdjun97.github.io/blog/TCI-ME/" target="_blank">TCI-ME Project</a></h4>
+                    <p>
+                        <span>Developed: [2021.05.29 ~ 2021.06.13]</span>
+                    </p>
+                    <img src="../assets/images/TCI-ME/TCI-ME.jpg"/>
                 </div>
             </div>
         </div>
