--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -49,7 +49,7 @@
             </div>
 	        <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon">
-                    <i class="fa fa-umbrella" aria-hidden="true"></i>
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
                     <h4><a href="https://kdjun97.github.io/blog/TCI-ME/" target="_blank">TCI-ME Project</a></h4>
@@ -57,6 +57,17 @@
                         <span>Developed: [2021.05.29 ~ 2021.06.13]</span>
                     </p>
                     <img src="../assets/images/TCI-ME/TCI-ME.jpg"/>
+                </div>
+            </div>
+            <div class="vertical-timeline-block">
+                <div class="vertical-timeline-icon">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                </div>
+                <div class="vertical-timeline-content">
+                    <h4><a href="https://kdjun97.github.io/blog/Internship/" target="_blank">Internship</a></h4>
+                    <p>
+                        <span>Developed: [2021.06.21 ~ 2021.08.27]</span>
+                    </p>
                 </div>
             </div>
         </div>
