[ADD] Spiring Post

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -70,6 +70,17 @@
                     </p>
                 </div>
             </div>
+            <div class="vertical-timeline-block">
+                <div class="vertical-timeline-icon">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                </div>
+                <div class="vertical-timeline-content">
+                    <h4><a href="https://kdjun97.github.io/blog/Internship/" target="_blank">Spring MVC Project</a></h4>
+                    <p>
+                        <span>Developed: [2021.12.07 ~ 2021.12.18]</span>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
