[EDIT] project url

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -75,7 +75,7 @@
                     <i class="fa fa-pencil" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a href="https://kdjun97.github.io/blog/Internship/" target="_blank">Spring MVC Project</a></h4>
+                    <h4><a href="https://kdjun97.github.io/blog/SpringProject/" target="_blank">Spring MVC Project</a></h4>
                     <p>
                         <span>Developed: [2021.12.07 ~ 2021.12.18]</span>
                     </p>
