--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -47,6 +47,29 @@
                     <img src="../assets/images/Project_Liar/title.jpg"/>
                 </div>
             </div>
+            <div class="vertical-timeline-block">
+                <div class="vertical-timeline-icon">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                </div>
+                <div class="vertical-timeline-content">
+                    <h4><a href="https://kdjun97.github.io/blog/firebase-with-flutter/" target="_blank">Make Search Engine</a></h4>
+                    <p>
+                        <span>Developed: [2021.05.03 ~ 2021.05.16]</span>
+                    </p>
+                    <img src="../assets/images/flutter_firebase_final/logo.png"/>
+                </div>
+            </div>
+            <div class="vertical-timeline-block">
+                <div class="vertical-timeline-icon">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                </div>
+                <div class="vertical-timeline-content">
+                    <h4><a href="https://kdjun97.github.io/blog/python-flask/" target="_blank">Make Search Engine</a></h4>
+                    <p>
+                        <span>Developed: [2021.05.10 ~ 2021.06.18]</span>
+                    </p>
+                </div>
+            </div>
 	        <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon">
                     <i class="fa fa-pencil" aria-hidden="true"></i>
