--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -52,7 +52,7 @@
                     <i class="fa fa-pencil" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a href="https://kdjun97.github.io/blog/firebase-with-flutter/" target="_blank">Make Search Engine</a></h4>
+                    <h4><a href="https://kdjun97.github.io/blog/firebase-with-flutter/" target="_blank">Marketplace</a></h4>
                     <p>
                         <span>Developed: [2021.05.03 ~ 2021.05.16]</span>
                     </p>
