[ADD] project img

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -102,6 +102,7 @@
                     <p>
                         <span>Developed: [2021.12.07 ~ 2021.12.18]</span>
                     </p>
+                    <img src="../assets/images/Spring_MVC/logo.jpg"/>
                 </div>
             </div>
         </div>
