--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -56,7 +56,7 @@
                     <p>
                         <span>Developed: [2021.05.03 ~ 2021.05.16]</span>
                     </p>
-                    <img src="../assets/images/flutter_firebase_final/logo.png"/>
+                    <img src="../assets/images/flutter_firebase_final/main_logo.PNG"/>
                 </div>
             </div>
             <div class="vertical-timeline-block">
