[EDIT] gitalk function

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -10,11 +10,11 @@
 		<div id="gitalk-container" ></div>
 		<script type="text/javascript">
             var gitalk = new Gitalk({
-                clientID: '06d60e5287de2b4292cc',
-                clientSecret: 'bdf1b23d4351a323bd556fde080567b0e0d0e138',
-                repo: 'blogcomments',
-                owner: 'songkong',
-                admin: ['songkong'],
+                clientID: 'b88407959b495d27b568',
+                clientSecret: '582f3ac2ea8bc81eed93d4d028b7bb9b6f652ab7',
+                repo: 'gitalk',
+                owner: 'kdjun97',
+                admin: ['kdjun97'],
                 id: location.pathname,
                 distractionFreeMode: false
             });
