--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -103,6 +103,17 @@
                     </p>
                 </div>
             </div>
+            <div class="vertical-timeline-block">
+                <div class="vertical-timeline-icon">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                </div>
+                <div class="vertical-timeline-content">
+                    <h4><a href="https://kdjun97.github.io/blog/Internship2/" target="_blank">Internship</a></h4>
+                    <p>
+                        <span>Developed: [2022.03.02 ~ 2022.06.30]</span>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
