--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -108,7 +108,7 @@
                     <i class="fa fa-pencil" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a href="https://kdjun97.github.io/blog/Internship2/" target="_blank">Internship</a></h4>
+                    <h4><a href="https://kdjun97.github.io/blog/Internship2/" target="_blank">Internship2</a></h4>
                     <p>
                         <span>Developed: [2022.03.02 ~ 2022.06.30]</span>
                     </p>
