--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,18 @@
             <h1 class="blue-title">Projects</h1>
         </div>
         <div id="vertical-timeline" class="light-timeline">
-            
+
+            <div class="vertical-timeline-block">
+                <div class="vertical-timeline-icon">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                </div>
+                <div class="vertical-timeline-content">
+                    <h4><a href="https://kdjun97.github.io/blog/Lazy-Manager3/" target="_blank">Lazy Manager</a></h4>
+                    <p>
+                        <span>Developed: [2022.03.24 ~ 2022.??.??]</span>
+                    </p>
+                </div>
+            </div>
             <div class="vertical-timeline-block">
                 <div class="vertical-timeline-icon">
                     <i class="fa fa-pencil" aria-hidden="true"></i>
@@ -82,24 +93,6 @@
                         <span>Developed: [2021.02.01 ~ 2021.02.28]</span>
                     </p>
                     <img src="../assets/images/Project_Liar/title.jpg"/>
-                </div>
-            </div>
-            <div class="vertical-timeline-block">
-                <div class="vertical-timeline-icon">
-                    <i class="fa fa-pencil" aria-hidden="true"></i>
-                </div>
-                <div class="vertical-timeline-content">
-                    <h4><a href="https://kdjun97.github.io/blog/Lazy_Manager/" target="_blank">Lazy Manager</a></h4>
-                    <p>
-						<span>Stopped Development</span>
-                        <div>
-                            <!--
-                            <iframe src="https://ghbtns.com/github-btn.html?user=songkong&repo=Blog&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
-                            <iframe src="https://ghbtns.com/github-btn.html?user=songkong&repo=Blog&type=fork&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
-                            -->
-                        </div>
-
-					</p>
                 </div>
             </div>
         </div>
