Docs: Modify project due

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,7 +12,7 @@
                 <div class="vertical-timeline-content">
                     <h4><a href="https://kdjun97.github.io/blog/Lazy-Manager3/" target="_blank">Lazy Manager</a></h4>
                     <p>
-                        <span>Developed: [2022.03.24 ~ 2022.??.??]</span>
+                        <span>Developed: [2022.03.24 ~ 2022.04.20]</span>
                     </p>
                 </div>
             </div>
