--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -36,7 +36,7 @@ layout: default
 				</li>
 				{% endfor %}
 			</ul>
-			<ul class="posts-list tab-two-list tab-hidden" id="pag-itemContainer-two">
+			<ul class="posts-list tab-two-list" id="pag-itemContainer-two">
 				{% assign counter-two = 0 %}
 				{% for post in site.categories.Life %}
 				{% assign counter-two = counter-two | plus: 1 %}
