--- a/_includes/post-list-pagination.html
+++ b/_includes/post-list-pagination.html
@@ -1,6 +1,6 @@
 {% if counter-one > 5 %}
     <div>
-	<div class="page-holder page-holder-one tab-hidden"></div>
+	<div class="page-holder page-holder-one"></div>
     </div>
 {% endif %}
 {% if counter == 0 %}
@@ -11,7 +11,7 @@
 
 {% if counter-two > 5 %}
     <div>
-	<div class="page-holder page-holder-two tab-hidden"></div>
+	<div class="page-holder page-holder-two"></div>
     </div>
 {% endif %}
 {% if counter == 0 %}
