--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -14,7 +14,7 @@ layout: default
 					<i class="fa fa-paw" aria-hidden="true"></i>
 				{% endfor %}
 			</div>
-			<ul class="posts-list tab-one-list tab-hidden" id="pag-itemContainer-one">
+			<ul class="posts-list tab-one-list" id="pag-itemContainer-one">
 				{% assign counter-one = 0 %}
 				{% for post in site.categories.Tech %}
 				{% assign counter-one = counter-one | plus: 1 %}
