--- a/_includes/post-list-pagination.html
+++ b/_includes/post-list-pagination.html
@@ -9,6 +9,10 @@
     </div>
 {% endif %}
 
+{% if counter-two == 6 %}
+    <div>
+	    <p>6이다</p>
+    </div>
 {% if counter-two > 5 %}
     <div>
 	<div class="page-holder page-holder-two tab-hidden"></div>
