--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -9,7 +9,7 @@ layout: default
 			</div>
 			<div class="posts-tabs">
 				<span class="posts-tab-item btn-left tab-one active">Tech</span>
-				<span class="posts-tab-item btn-right tab-two active">Life</span>
+				<span class="posts-tab-item btn-right tab-two">Life</span>
 				{% for i in (1..10) %}
 					<i class="fa fa-paw" aria-hidden="true"></i>
 				{% endfor %}
