--- a/_includes/post-list-pagination.html
+++ b/_includes/post-list-pagination.html
@@ -13,6 +13,7 @@
     <div>
 	    <p>6이다</p>
     </div>
+{% endif %}
 {% if counter-two > 5 %}
     <div>
 	<div class="page-holder page-holder-two tab-hidden"></div>
